--- a/add_book.css
+++ b/add_book.css
@@ -1,5 +1,90 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: rgb(183, 215, 255);
-    text-decoration: none;
+* {
+  box-sizing: border-box;
+}
+
+.col-span {
+  @media (width > 790px) {
+    grid-column: span 2;
+  }
+}
+
+
+input::placeholder {
+  color: rgba(30, 144, 255, 0.8);
+  /* pour afficher le placeholder en grisé */
+}
+
+
+button {
+  background-color: rgb(30, 144, 255);
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 8px;
+  border: 1px solid rgb(30, 144, 255);
+}
+
+form {
+  display: grid;
+  gap: 1rem;
+
+  @media (width > 790px) {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+input,
+textarea {
+  display: block;
+  width: 100%;
+  color: rgb(30, 144, 255);
+  /* max-width: 600px; */
+  padding: 1rem;
+  border-radius: 8px;
+  border: 1px solid rgb(30, 144, 255);
+}
+
+textarea {
+  resize: vertical;
+}
+
+input[type="file"] {
+  background-color: rgb(30, 144, 255);
+  border: 1px solid rgb(30, 144, 255);
+  border-radius: 1rem;
+  cursor: pointer;
+  padding: 1rem;
+  color: white;
+}
+
+input::file-selector-button {
+  display: none;
+}
+
+.message-couv {
+  font-size: 0.8rem;
+}
+
+
+.add-book-form {
+  /* Assuming you use the class from option 1 */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.add-book-form label {
+  width: 120px;
+  text-align: right;
+}
+
+
+input[type=file]::file-selector-button {
+  background-color: rgb(30, 144, 255);
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 8px;
+  border: 1px solid rgb(30, 144, 255);
+  width: 200px;
 }
